# demo-azure-avatar

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  cleanup_threads.py  prompt.txt  pyproject.toml
backend/app/: config.py  foundry_agent.py  main.py  openai_client.py  rag.py  rag_service.py  search_client.py  voice_live.py
backend/tests/: __init__.py  conftest.py  test_main.py  test_voice_live.py
frontend/: .dockerignore  App.tsx  Dockerfile  README.md  index.html  metadata.json  nginx.conf  package-lock.json  package.json  tailwind.config.ts  types.ts
frontend-nextjs-backup/: .env.example
frontend-nextjs-backup/app/: layout.tsx
frontend-nextjs-backup/components/: VoiceAvatar.tsx
frontend/app/: globals.css  page.tsx
frontend/components/: AvatarPanel.tsx  AvatarView.tsx  ChatInterface.tsx  ChatPanel.tsx  FaqSuggestions.tsx  Header.tsx  InputBar.tsx  Sidebar.tsx  VoiceAvatar.tsx  VoiceControls.tsx
frontend/hooks/: useVoiceAvatar.ts
frontend/lib/: audio-utils.ts  colors.ts
frontend/public/: audio-processor.js
frontend/services/: audioUtils.ts  voiceLiveService.ts  webrtcService.ts
